Checking fixes fo alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,8 +28,3 @@ img.profile-photo {
     }
   }
 
-@media print, screen and (max-width: 960px) {
-    header {
-      padding-right: 320px;
-    }
-}
